Changes for 1.5
* Created new Territory attachment, "resources", which will allow territories to produce other resources besides PUs. (veqryn)

* Fixed engine to allow multiple resources for purchasing of units and repairs. Added new panel on stats tab to show additional resources. (edwin van der wal)

* Phase 4 of abstraction, RulesAttachment now abstracted into RulesAttachment, AbstractRulesAttachment, and AbstractPlayerRulesAttachment. (veqryn)

* Created a new overlay for territory effect images, that is enabled in map.properties map.useTerritoryEffectMarkers=true, territory_effects.txt, and territoryEffects folder. (edwin van der wal)

* Fixed bug where 'when' based triggers did not fire at all. (veqryn)

* Fixed bug where default based triggers were firing multiple times for each default firing location. (veqryn)

* Created new Trigger Attachment, removeUnits, which allows you to remove units from a territory for selected players. (veqryn)

* Created new Trigger Attachment, chance, which allows you to have a certain chance for a trigger to activate (tested only after all conditions are true). (veqryn)

* Phase 3 of abstraction of RulesAttachment and TriggerAttachment and PoliticalActionAttachment: the creation of an abstract class to hold all common cold related to conditions. (veqryn)

* Created new rules attachment for conditions, chance, which allows you to have a certain chance for a condition to be true. (veqryn)

* Temporary fix for the issues caused by only testing political conditions once.  Now we test them after each political action. (veqryn)

* Updated political action attachments validation to only test once per politics phase for all the conditions for each action. (veqryn)

* Created new relationship attachment, givesBackOriginalTerritories, which lets a player give back originally controlled territories to another player. (veqryn)
